(FIX) Changed backcolor and font color to pass the contrast test

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
 body {
     padding: 0;
     margin: 0;
-    background-color: goldenrod;
+    background-color: black;
 }
 
 /* =========== Navigation Bar =========== */
@@ -774,7 +774,8 @@ body {
     border: none;
     border-radius: 5px;
     background-color: #ff9800;
-    color: white;
+    color: black;
+    font-weight: bold;
     cursor: pointer;
     transition: background 0.3s;
 }
@@ -972,24 +973,4 @@ body {
         gap: 3.5rem;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
